[package]
name = "supers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
actix-web = "4"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
anyhow = "1.0.68"
log = "0.4.17"
env_logger = "0.10.0"

[dev-dependencies]
rand = "0.8.5"
