[package]
name = "supers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
actix-web = "4"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
anyhow = "1.0.68"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "registry"] }
tracing-actix-web = "0.7.1"

[dev-dependencies]
rand = "0.8.5"
