[package]
name = "supers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
actix-web = "4"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
anyhow = "1.0.68"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "registry", "json"] }
tracing-actix-web = "0.7.1"
tracing-log = "0.1.3"
test-log = "0.2.11"
config = "0.13.3"
dirs = "4.0.0"

[dev-dependencies]
env_logger = "0.10.0"
rand = "0.8.5"
tempfile = "3.3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.2.2", features = ["v4"] }
